--- a/watheeqplus/index.html
+++ b/watheeqplus/index.html
@@ -25,7 +25,6 @@
                 <a href="#home" class="nav-link" data-ar="الرئيسية" data-en="Home">الرئيسية</a>
                 <a href="#services" class="nav-link" data-ar="الخدمات" data-en="Services">الخدمات</a>
                 <a href="#expertise" class="nav-link" data-ar="التخصصات" data-en="Expertise">التخصصات</a>
-                <a href="#pricing" class="nav-link" data-ar="الأسعار" data-en="Pricing">الأسعار</a>
                 <a href="#contact" class="nav-link" data-ar="تواصل معنا" data-en="Contact">تواصل معنا</a>
             </div>
 
@@ -64,7 +63,7 @@
                 </p>
                 <div class="hero-buttons">
                     <button class="btn-hero-primary">
-                        <span data-ar="ابدأ الآن" data-en="Start Now">ابدأ مجاناً</span>
+                        <span data-ar="اطلب الخدمة" data-en="Start Order"><a href="form.html">اطلب الخدمة</a> </span>
                         <svg class="btn-arrow" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
                         </svg>
@@ -342,7 +341,7 @@
             </div>
         </div>
     </section>
-
+<!--
     <section id="pricing" class="pricing-section">
         <div class="container">
             <div class="section-header">
@@ -401,7 +400,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <section id="faq" class="faq-section">
         <div class="container">
