--- a/watheeqplus v2/index.html
+++ b/watheeqplus v2/index.html
@@ -131,7 +131,7 @@
 
       <div class="about-images">
         <div class="about-img main-img">
-          <img src="img/22.jpg" alt="AI Legal Team">
+          <img src="img/ai-for-lawyers.png" alt="AI Legal Team">
         </div>
        <!-- <div class="about-img side-img">
           <img src="img/22.jpg" alt="Legal Technology">
