--- a/watheeqplus v2/index.html
+++ b/watheeqplus v2/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </nav>
-<!-- hero section -->
+<!-- hero sectio -->
     <section id="home" class="hero-section">
         <div class="hero-background"></div>
         <div class="container hero-container">
