--- a/watheeqplus v2/index.html
+++ b/watheeqplus v2/index.html
@@ -119,13 +119,13 @@
     <div class="about-content glass-effect">
       <div class="about-text">
         <h3 data-ar="رسالتنا" data-en="Our Mission">رسالتنا</h3>
-        <p data-ar="نسعى إلى تمكين الأفراد والشركات من الوصول إلى الخدمات القانونية بسهولة وكفاءة من خلال حلول رقمية مدعومة بالذكاء الاصطناعي." data-en="We aim to empower individuals and businesses to access legal services easily and efficiently through AI-powered digital solutions.">
-          نسعى إلى تمكين الأفراد والشركات من الوصول إلى الخدمات القانونية بسهولة وكفاءة من خلال حلول رقمية مدعومة بالذكاء الاصطناعي.
+        <p data-ar="تمكين القضاة والمحامين من الاستفادة من التحليلات الذكية للقوانين والأحكام السابقة، لتقديم قرارات ودعاوى قانونية دقيقة، مبنية على بيانات موثوقة، مع الالتزام الكامل بأعلى معايير النزاهة والشفافية" data-en="Empowering judges and lawyers to benefit from intelligent analyses of laws and previous rulings, enabling them to deliver accurate legal decisions and arguments based on reliable data, while fully adhering to the highest standards of integrity and transparency.">
+تمكين القضاة والمحامين من الاستفادة من التحليلات الذكية للقوانين والأحكام السابقة، لتقديم قرارات ودعاوى قانونية دقيقة، مبنية على بيانات موثوقة، مع الالتزام الكامل بأعلى معايير النزاهة والشفافية
         </p>
 
         <h3 data-ar="رؤيتنا" data-en="Our Vision">رؤيتنا</h3>
-        <p data-ar="أن نكون الرواد في التحول الرقمي القانوني في المنطقة، من خلال تقديم خدمات قانونية ذكية وآمنة." data-en="To be leaders in legal digital transformation in the region, delivering smart and secure legal services.">
-          أن نكون الرواد في التحول الرقمي القانوني في المنطقة، من خلال تقديم خدمات قانونية ذكية وآمنة.
+        <p data-ar="تقديم منصة قانونية ذكية تُسهم  في تعزيز العدالة وتسريع الإجراءات القضائية، مع رفع مستوى الكفاءة والشفافية في النظام القضائي" data-en="Providing an intelligent legal platform that contributes to enhancing justice and expediting judicial procedures, while improving the efficiency and transparency of the judicial system.">
+        تقديم منصة قانونية ذكية تُسهم  في تعزيز العدالة وتسريع الإجراءات القضائية، مع رفع مستوى الكفاءة والشفافية في النظام القضائي
         </p>
       </div>
 
@@ -153,11 +153,7 @@
             <div class="services-grid">
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <circle cx="50" cy="50" r="35" stroke="#D4AF37" fill="none" stroke-width="3"/>
-                            <path d="M50 25 L50 50 L70 60" stroke="#3B82F6" stroke-width="3" fill="none"/>
-                            <circle cx="50" cy="50" r="5" fill="#FFD700"/>
-                        </svg>
+                       <img src="img/chat.png"/>
                     </div>
                     <h3 data-ar="استشارات فورية" data-en="Instant Consultations">استشارات فورية</h3>
                     <p data-ar="احصل على استشارة قانونية فورية من خلال نظام الذكاء الاصطناعي المتقدم الخاص بنا على مدار الساعة" data-en="Get instant legal consultation through our advanced AI system 24/7">احصل على استشارة قانونية فورية من خلال نظام الذكاء الاصطناعي المتقدم الخاص بنا على مدار الساعة</p>
@@ -165,13 +161,8 @@
 
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <rect x="20" y="30" width="60" height="50" rx="5" stroke="#D4AF37" fill="none" stroke-width="3"/>
-                            <line x1="30" y1="45" x2="70" y2="45" stroke="#3B82F6" stroke-width="2"/>
-                            <line x1="30" y1="55" x2="70" y2="55" stroke="#3B82F6" stroke-width="2"/>
-                            <line x1="30" y1="65" x2="60" y2="65" stroke="#3B82F6" stroke-width="2"/>
-                            <circle cx="75" cy="25" r="8" fill="#FFD700"/>
-                        </svg>
+                        <img src="img/contract.png"/>
+
                     </div>
                     <h3 data-ar="صياغة العقود" data-en="Contract Drafting">صياغة العقود</h3>
                     <p data-ar="صياغة ومراجعة العقود القانونية بدقة عالية باستخدام تقنيات الذكاء الاصطناعي المتطورة" data-en="Draft and review legal contracts with high accuracy using advanced AI technology">صياغة ومراجعة العقود القانونية بدقة عالية باستخدام تقنيات الذكاء الاصطناعي المتطورة</p>
@@ -179,11 +170,8 @@
 
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <path d="M30 70 L30 40 Q30 30 40 30 L60 30 Q70 30 70 40 L70 70" stroke="#D4AF37" fill="none" stroke-width="3"/>
-                            <rect x="25" y="70" width="50" height="10" fill="#3B82F6"/>
-                            <path d="M45 45 L50 55 L60 40" stroke="#FFD700" stroke-width="3" fill="none"/>
-                        </svg>
+                         <img src="img/balance.png"/>
+
                     </div>
                     <h3 data-ar="التقاضي الذكي" data-en="Smart Litigation">التقاضي الذكي</h3>
                     <p data-ar="تحليل القضايا وتقديم استراتيجيات قانونية فعالة بناءً على آلاف القضايا السابقة" data-en="Analyze cases and provide effective legal strategies based on thousands of previous cases">تحليل القضايا وتقديم استراتيجيات قانونية فعالة بناءً على آلاف القضايا السابقة</p>
@@ -191,12 +179,8 @@
 
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <circle cx="50" cy="40" r="15" stroke="#D4AF37" stroke-width="3" fill="none"/>
-                            <path d="M50 55 L50 75" stroke="#3B82F6" stroke-width="3"/>
-                            <path d="M35 65 L50 75 L65 65" stroke="#3B82F6" stroke-width="3" fill="none"/>
-                            <circle cx="50" cy="40" r="5" fill="#FFD700"/>
-                        </svg>
+                       <img src="img/compliant.png"/>
+
                     </div>
                     <h3 data-ar="الامتثال القانوني" data-en="Legal Compliance">الامتثال القانوني</h3>
                     <p data-ar="تأكد من امتثال شركتك لجميع القوانين واللوائح السعودية بشكل تلقائي" data-en="Ensure your company complies with all Saudi laws and regulations automatically">تأكد من امتثال شركتك لجميع القوانين واللوائح السعودية بشكل تلقائي</p>
@@ -204,12 +188,7 @@
 
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <rect x="30" y="35" width="40" height="45" rx="3" stroke="#D4AF37" fill="none" stroke-width="3"/>
-                            <path d="M40 50 L45 55 L60 40" stroke="#3B82F6" stroke-width="3" fill="none"/>
-                            <circle cx="75" cy="30" r="12" stroke="#FFD700" stroke-width="2" fill="none"/>
-                            <path d="M75 25 L75 35 M70 30 L80 30" stroke="#FFD700" stroke-width="2"/>
-                        </svg>
+                        <img src="img/intellectual-property.png"/>
                     </div>
                     <h3 data-ar="الملكية الفكرية" data-en="Intellectual Property">الملكية الفكرية</h3>
                     <p data-ar="حماية براءات الاختراع والعلامات التجارية وحقوق الملكية الفكرية بكفاءة عالية" data-en="Protect patents, trademarks and intellectual property rights with high efficiency">حماية براءات الاختراع والعلامات التجارية وحقوق الملكية الفكرية بكفاءة عالية</p>
@@ -217,12 +196,7 @@
 
                 <div class="service-card glass-effect">
                     <div class="service-icon">
-                        <svg viewBox="0 0 100 100">
-                            <path d="M50 20 L70 40 L70 75 L30 75 L30 40 Z" stroke="#D4AF37" fill="none" stroke-width="3"/>
-                            <rect x="42" y="60" width="16" height="15" fill="#3B82F6"/>
-                            <circle cx="45" cy="45" r="3" fill="#FFD700"/>
-                            <circle cx="55" cy="45" r="3" fill="#FFD700"/>
-                        </svg>
+                        <img src="img/home.png"/>
                     </div>
                     <h3 data-ar="قانون العقارات" data-en="Real Estate Law">قانون العقارات</h3>
                     <p data-ar="خدمات قانونية شاملة للمعاملات العقارية والتطوير العقاري في المملكة" data-en="Comprehensive legal services for real estate transactions and development in the Kingdom">خدمات قانونية شاملة للمعاملات العقارية والتطوير العقاري في المملكة</p>
@@ -291,35 +265,35 @@
 
             <div class="expertise-grid">
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">⚖️</div>
+                    <div class="expertise-icon"><img src="img/contract.png"/></div>
                     <h4 data-ar="القانون التجاري" data-en="Commercial Law">القانون التجاري</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">🏛️</div>
+                    <div class="expertise-icon"><img src="img/court.png"/></div>
                     <h4 data-ar="القانون الجنائي" data-en="Criminal Law">القانون الجنائي</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">👨‍👩‍👧‍👦</div>
+                    <div class="expertise-icon"><img src="img/family.png"/></div>
                     <h4 data-ar="قانون الأسرة" data-en="Family Law">قانون الأسرة</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">💼</div>
+                    <div class="expertise-icon"><img src="img/auction.png"/></div>
                     <h4 data-ar="قانون العمل" data-en="Labor Law">قانون العمل</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">🏢</div>
+                    <div class="expertise-icon"><img src="img/office-building.png"/></div>
                     <h4 data-ar="قانون الشركات" data-en="Corporate Law">قانون الشركات</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">🌐</div>
+                    <div class="expertise-icon"><img src="img/international-law.png"/></div>
                     <h4 data-ar="القانون الدولي" data-en="International Law">القانون الدولي</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">💳</div>
+                    <div class="expertise-icon"><img src="img/bank.png"/></div>
                     <h4 data-ar="القانون المصرفي" data-en="Banking Law">القانون المصرفي</h4>
                 </div>
                 <div class="expertise-card glass-effect">
-                    <div class="expertise-icon">🔒</div>
+                    <div class="expertise-icon"><img src="img/cyber-security.png"/></div>
                     <h4 data-ar="الأمن السيبراني" data-en="Cybersecurity Law">الأمن السيبراني</h4>
                 </div>
             </div>
@@ -509,17 +483,17 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <div class="contact-card glass-effect">
-                        <div class="contact-icon">📧</div>
+                        <div class="contact-icon"><img src="img/email.png"/></div>
                         <h4 data-ar="البريد الإلكتروني" data-en="Email">البريد الإلكتروني</h4>
                         <p>info@ps-tt.com</p>
                     </div>
                     <div class="contact-card glass-effect">
-                        <div class="contact-icon">📱</div>
+                        <div class="contact-icon"><img src="img/phone.png"/></div>
                         <h4 data-ar="الهاتف" data-en="Phone">الهاتف</h4>
                         <p dir="ltr">+966 50 610 2151</p>
                     </div>
                     <div class="contact-card glass-effect">
-                        <div class="contact-icon">📍</div>
+                        <div class="contact-icon"><img src="img/address.png"/></div>
                         <h4 data-ar="العنوان" data-en="Address">العنوان</h4>
                         <p data-ar="الرياض، المملكة العربية السعودية" data-en="Riyadh, Saudi Arabia">الرياض، المملكة العربية السعودية</p>
                     </div>
@@ -527,20 +501,20 @@
 
                 <form class="contact-form glass-effect">
                     <div class="form-group">
-                        <input type="text" id="name" required>
                         <label for="name" data-ar="الاسم الكامل" data-en="Full Name">الاسم الكامل</label>
+                        <input type="text" id="name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" required>
                         <label for="email" data-ar="البريد الإلكتروني" data-en="Email">البريد الإلكتروني</label>
+                        <input type="email" id="email" required>
                     </div>
                     <div class="form-group">
-                        <input type="tel" id="phone" required>
                         <label for="phone" data-ar="رقم الهاتف" data-en="Phone">رقم الهاتف</label>
+                        <input type="tel" id="phone" required>
                     </div>
                     <div class="form-group">
-                        <textarea id="message" rows="5" required></textarea>
                         <label for="message" data-ar="رسالتك" data-en="Your Message">رسالتك</label>
+                        <textarea id="message" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="btn-submit" data-ar="إرسال الرسالة" data-en="Send Message">إرسال الرسالة</button>
                 </form>
